-*- outline -*-  

This is a summary of main changes.  For details, please see
the CVS ChangeLog and PG Trac, http://proofgeneral.inf.ed.ac.uk/trac.


* Changes of Proof General 4.3 from Proof General 4.2

** Generic/misc changes

*** Require Prooftree version 0.11
    Check the Prooftree website to see which other versions of
    Prooftree are compatible with Proof General 4.3.

** Coq changes

*** Asynchronous parallel compilation of required modules
    Proof General has now a second implementation for compiling
    required Coq modules. 
    Check menu Coq -> Settings -> Compile Parallel In Background
    to compile modules in parallel in the background while Proof
    General stays responsive.

*** Support for bullets, braces and Grab Existential Variables for Prooftree.

* Changes of Proof General 4.2 from Proof General 4.1

** Generic/misc changes

*** Added user option: `proof-next-command-insert-space'
    Allows the user to turn off the electric behaviour of generating
    newlines or spaces in the buffer.  Turned on by default, set
    to nil to revert to PG 3.7 behaviour.

*** Support proof-tree visualization via the external Prooftree program
    Currently only Coq (using Coq version 8.4beta or newer)
    supports proof-tree visualization. If Prooftree is installed,
    the proof-tree display can be started via the toolbar, the
    Proof-General menu or by C-c C-d.  To get Prooftree, visit
    http://askra.de/software/prooftree

*** Compilation fixes for Emacs 24.

*** Fix "pgshell" mode for shell/CLI prover interaction
    Also add some quick hacks for scripting OCaml and Haskell


** Coq changes

*** Smarter three windows mode:
  In three pane mode, there are three display modes, depending
  where the three useful buffers are displayed: scripting
  buffer, goals buffer and response buffer.

  Here are the three modes:

  - vertical: the 3 buffers are displayed in one column.
  - hybrid: 2 columns mode, left column displays scripting buffer